# asset-manager

./: .editorconfig  .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  release-please-config.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: release-signing.md
scripts/: check-node.mjs
src/: App.css  App.tsx  AppShell.tsx  tauri.ts  types.ts
src-tauri/: .gitignore  CHANGELOG.md  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/src/: backup.rs  commands.rs  db.rs  dev_seed.rs  gunspec.rs  lib.rs  main.rs
src/components/: AssetForm.tsx  AssetKindIcon.tsx  AutocompleteField.tsx  ConfirmModal.tsx  DecimalTextInput.tsx  DigitsOnlyInput.tsx  FirearmChecklist.tsx  SilhouetteSvgBrowser.tsx  SilhouetteSvgBrowserModal.tsx  TagInput.tsx
src/components/dashboard/: AmmoCaliberDonut.tsx  TopFirearmsWidget.tsx  UpcomingMaintenanceWidget.tsx
src/context/: AssetsListContext.tsx  ToastContext.tsx
src/icons/: index.ts  silhouettes.tsx
src/lib/: assetDefaults.ts  parseNumeric.ts
src/pages/: AssetDrawerRoute.tsx  AssetTable.tsx  AssetsLayout.tsx  DashboardPage.tsx  RangeDayDetailPage.tsx  RangeDayNewPage.tsx  RangeDaysPage.tsx
