[package]
name = "asset-manager"
version = "0.1.0"
description = "Personal firearms and equipment inventory"
authors = ["you"]
edition = "2021"

[lib]
name = "asset_manager"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"
